<resources>
    <string name="app_name">LoRa\'s Pair</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">@string/app_name</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_commands">Commands</string>

    <string name="user_add">+</string>
    <string name="user_sign">USER SIGN</string>
    <string name="user_apply">APPLY</string>

    <string name="command_add">+</string>
    <string name="command_save">SAVE</string>

    <string name="bt_service_start">Connect</string>
    <string name="bt_service_connecting">Connecting…</string>
    <string name="bt_service_stop">Disconnect</string>
    <string name="bt_connected_device">Connected Device</string>

    <string name="menu_map">Map</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_terminal">Terminal</string>
    <string name="menu_settings">Settings</string>

    <string name="choosing_map_region">Choose map region</string>
    <string name="estimated_map_region_tiles_amount">Estimated:</string>
    <string name="open_street_map">OpenStreetMap</string>
    <string name="open_topo">OpenTopo</string>
    <string name="current_zoom_level">Zoom: %1$d/%2$d</string>
    <string name="map_download_info">%1$d-%2$d — %3$d tiles — %4$.3f MB</string>
    <string-array name="range_slider_values">
        <item>1</item>
        <item>17</item>
    </string-array>
    <string name="zoom_in">Zoom In</string>
    <string name="zoom_out">Zoom Out</string>
    <string name="save_map">Save Map</string>
    <string name="cache_info">Cache Info</string>
    <string name="map_tile_source">Map Tile Source</string>
    <string name="map_settings">Map Settings</string>
    <string name="map_offline_mode">OFFLINE MODE</string>
    <string name="map_ruler">RULER</string>
    <string name="map_ruler_length_m">%1$.3f m</string>
    <string name="map_ruler_length_km">%1$.3f km</string>
    <string name="map_delete_offline">DELETE OFFLINE MAPS</string>
    <string name="map_delete_gps">DELETE GPS DATA</string>

    <string name="default_chat_sign">No sign is chosen</string>
    <string name="delete_chat_dialog_message">Delete chat with</string>

    <string name="command_from">FROM</string>
    <string name="command_to">TO</string>
    <string name="command_name">COMMAND NAME</string>
    <string name="command_value">COMMAND VALUE</string>
    <string name="command_send">SEND</string>

    <string name="bt_is_on">Bluetooth is on</string>
    <string name="bt_is_off">Bluetooth is off</string>
    <string name="bt_no_permissions">No Bluetooth permissions</string>
    <string name="bt_bounded_devices">Bounded Devices</string>
    <string name="bt_nearby_devices">Nearby Devices</string>
    <string name="bt_refresh">Refresh</string>
    <string name="bt_settings">Bluetooth settings</string>

    <string name="bluetooth_permission_title">Bluetooth permission</string>
    <string name="bluetooth_permission_grant">Bluetooth permission is required by this App. Please grant in next dialog.</string>
    <string name="bluetooth_permission_denied">Bluetooth permission was permanently denied. You have to enable permission \"%s\" in App settings.</string>
    <string name="location_services_required">Location services are required</string>

</resources>