<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:id="@+id/offline_mode_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_offline_mode" />

        <CheckBox
            android:id="@+id/ruler_check_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_ruler" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_offline_maps_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_delete_offline" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_gps_data_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/map_delete_gps" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>